All big pieces in
* SDK generation consolidates and copies the docs into the docs folder
* CLi commands: clean-api-ref, clean-docs, generate-api-ref,
generate-docs
* Fix sidebar

--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/README.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/README.mustache
@@ -186,8 +186,8 @@ Class | Method | HTTP request | Description
 
 ## Documentation for Models
 
-{{#models}}{{#model}} - [{{moduleName}}.{{classname}}]({{modelDocPath}}{{classname}}.md)
-{{/model}}{{/models}}
+{{>partial_model_doc}}
+
 
 ## Documentation for Authorization
 
