--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/api_doc.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/api_doc.mustache
@@ -1,6 +1,12 @@
-## {{classname}}{{#description}}
+---
+id: {{#lambda.lowercase}}{{classname}}{{/lambda.lowercase}}
+title: {{classname}}
+---
+{{#description}}
+## Description
 
-{{description}}{{/description}}
+{{description}}
+{{/description}}
 
 All URIs are relative to *{{basePath}}*
 
@@ -92,16 +98,23 @@ apiInstance.{{{operationId}}}({{#requiredParams}}{{{paramName}}}{{^-last}}, {{/-
 {{^allParams}}This endpoint does not need any parameter.{{/allParams}}{{#allParams}}{{#-last}}
 Name | Type | Description  | Notes
 ------------- | ------------- | ------------- | -------------{{/-last}}{{/allParams}}
-{{#allParams}} **{{paramName}}** | {{#isPrimitiveType}}**{{dataType}}**{{/isPrimitiveType}}{{^isPrimitiveType}}{{#isFile}}**{{dataType}}**{{/isFile}}{{^isFile}}[**{{dataType}}**]({{baseType}}.md){{/isFile}}{{/isPrimitiveType}}| {{description}} | {{^required}}[optional] {{/required}}{{#defaultValue}}[default to {{defaultValue}}]{{/defaultValue}}
+{{#allParams}}
+**{{paramName}}** | {{#isPrimitiveType}}**{{dataType}}**{{/isPrimitiveType}}{{^isPrimitiveType}}{{#isFile}}**{{dataType}}**{{/isFile}}{{^isFile}}[**{{dataType}}**](../sdk_nodejs_index#{{baseType}})
+{{/isFile}}{{/isPrimitiveType}}| {{description}} | {{^required}}[optional] {{/required}}{{#defaultValue}}[default to {{defaultValue}}]{{/defaultValue}}
 {{/allParams}}
 
 #### Return type
 
-{{#returnType}}{{#returnTypeIsPrimitive}}**{{returnType}}**{{/returnTypeIsPrimitive}}{{^returnTypeIsPrimitive}}[**{{returnType}}**]({{returnBaseType}}.md){{/returnTypeIsPrimitive}}{{/returnType}}{{^returnType}}null (empty response body){{/returnType}}
+{{#returnType}}
+{{#returnTypeIsPrimitive}}**{{returnType}}**{{/returnTypeIsPrimitive}}
+{{^returnTypeIsPrimitive}}
+[**{{returnType}}**](../sdk_nodejs_index#{{returnBaseType}})
+{{/returnTypeIsPrimitive}}
+{{/returnType}}{{^returnType}}null (empty response body){{/returnType}}
 
 #### Authorization
 
-{{^authMethods}}No authorization required{{/authMethods}}{{#authMethods}}[{{name}}](../README.md#{{name}}){{^-last}}, {{/-last}}{{/authMethods}}
+{{^authMethods}}No authorization required{{/authMethods}}{{#authMethods}}[{{name}}](../sdk_nodejs_index#{{name}}){{^-last}}, {{/-last}}{{/authMethods}}
 
 #### HTTP request headers
 
