--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_kotlin/README.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_kotlin/README.mustache
@@ -1,4 +1,7 @@
-# {{packageName}} - Kotlin client library for {{appName}}
+---
+id: sdk_kotlin_index
+title: Kotlin SDK documentation
+---
 
 ## Requires
 
@@ -36,28 +39,21 @@ This runs all tests and packages the library.
 {{#jvm}}* Implementation of ApiClient is intended to reduce method counts, specifically to benefit Android targets.{{/jvm}}
 
 {{#generateApiDocs}}
-<a name="documentation-for-api-endpoints"></a>
 ## Documentation for API Endpoints
 
 All URIs are relative to *{{{basePath}}}*
 
 Class | Method | HTTP request | Description
 ------------ | ------------- | ------------- | -------------
-{{#apiInfo}}{{#apis}}{{#operations}}{{#operation}}*{{classname}}* | [**{{operationId}}**]({{apiDocPath}}{{classname}}.md#{{operationIdLowerCase}}) | **{{httpMethod}}** {{path}} | {{#summary}}{{{summary}}}{{/summary}}
+{{#apiInfo}}{{#apis}}{{#operations}}
+{{#operation}}[{{classname}}]({{apiDocPath}}{{classname}}.md) | [**{{operationId}}**]({{apiDocPath}}{{classname}}.md#{{operationIdLowerCase}}) | **{{httpMethod}}** {{path}} | {{#summary}}{{{summary}}}{{/summary}}
 {{/operation}}{{/operations}}{{/apis}}{{/apiInfo}}
 {{/generateApiDocs}}
 
 {{#generateModelDocs}}
-<a name="documentation-for-models"></a>
 ## Documentation for Models
 
-{{#modelPackage}}
-{{#models}}{{#model}} - [{{{modelPackage}}}.{{{classname}}}]({{modelDocPath}}{{{classname}}}.md)
-{{/model}}{{/models}}
-{{/modelPackage}}
-{{^modelPackage}}
-No model defined in this package
-{{/modelPackage}}
+{{>partial_model_doc}}
 {{/generateModelDocs}}
 
 <a name="documentation-for-authorization"></a>{{! TODO: optional documentation for authorization? }}
@@ -72,7 +68,7 @@ Authentication schemes defined for the API:
 {{/last}}
 {{/authMethods}}
 {{#authMethods}}
-<a name="{{name}}"></a>
+
 ### {{name}}
 
 {{#isApiKey}}- **Type**: API key
