--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_kotlin/README.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_kotlin/README.mustache
@@ -45,9 +45,9 @@ All URIs are relative to *{{{basePath}}}*
 
 Class | Method | HTTP request | Description
 ------------ | ------------- | ------------- | -------------
-{{#apiInfo}}{{#apis}}{{#operations}}
-{{#operation}}[{{classname}}]({{apiDocPath}}{{classname}}.md) | [**{{operationId}}**]({{apiDocPath}}{{classname}}.md#{{operationIdLowerCase}}) | **{{httpMethod}}** {{path}} | {{#summary}}{{{summary}}}{{/summary}}
+{{#apiInfo}}{{#apis}}{{#operations}}{{#operation}}[{{classname}}]({{apiDocPath}}{{classname}}.md) | [**{{operationId}}**]({{apiDocPath}}{{classname}}.md#{{operationIdLowerCase}}) | **{{httpMethod}}** {{path}} | {{#summary}}{{{summary}}}{{/summary}}
 {{/operation}}{{/operations}}{{/apis}}{{/apiInfo}}
+
 {{/generateApiDocs}}
 
 {{#generateModelDocs}}
