--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_kotlin/api_doc.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_kotlin/api_doc.mustache
@@ -12,8 +12,7 @@ All URIs are relative to *{{basePath}}*
 
 Method | HTTP request | Description
 ------------- | ------------- | -------------
-{{#operations}}{{#operation}}[**{{operationId}}**]({{classname}}.md#{{operationId}}) | **{{httpMethod}}** {{path}} | {{#summary}}{{summary}}{{/summary}}
-{{/operation}}{{/operations}}
+{{#operations}}{{#operation}}[**{{operationId}}**]({{classname}}.md#{{operationId}}) | **{{httpMethod}}** {{path}} | {{#summary}}{{summary}}{{/summary}}{{/operation}}{{/operations}}
 
 {{#operations}}
 {{#operation}}
