--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_swift5/README.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_swift5/README.mustache
@@ -1,5 +1,10 @@
 # Swift5 API client for {{{projectName}}}
 
+:::caution
+The SDK code and documetnation are in ALPHA state and are under heavy development. As a result, the apis are still in
+flux, and the documentation may be out of date with the code.
+:::
+
 {{#appDescriptionWithNewLines}}
 {{{appDescriptionWithNewLines}}}
 {{/appDescriptionWithNewLines}}
