--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/api_test.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/api_test.mustache
@@ -5,7 +5,8 @@
     define(['expect.js', process.cwd()+'/src/{{#invokerPackage}}{{invokerPackage}}/{{/invokerPackage}}index'], factory);
   } else if (typeof module === 'object' && module.exports) {
     // CommonJS-like environments that support module.exports, like Node.
-    factory(require('expect.js'), require(process.cwd()+'/src/{{#invokerPackage}}{{invokerPackage}}/{{/invokerPackage}}index'));
+    factory(require('expect.js'), require(process.cwd()
++'/src/{{#invokerPackage}}{{invokerPackage}}/{{/invokerPackage}}index'));
   } else {
     // Browser globals (root is window)
     factory(root.expect, root.{{moduleName}});
@@ -16,7 +17,9 @@
   var instance;
 
   beforeEach(function() {
-    instance = new {{moduleName}}.{{classname}}();
+    const yat = new {{moduleName}}.YatJs();
+    yat.basePath = 'https://localhost:3001';
+    instance = yat.{{#lambda.camelcase}}{{baseName}}{{/lambda.camelcase}}();
   });
 
   var getProperty = function(object, getter, property) {
