--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/index.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/index.mustache
@@ -1,42 +1,91 @@
 {{>licenseInfo}}
 
+
 import ApiClient from './ApiClient';
 {{#models}}import {{#model}}{{classFilename}}{{/model}} from './{{#modelPackage}}{{modelPackage}}/{{/modelPackage}}{{importPath}}';
-{{/models}}{{#apiInfo}}{{#apis}}import {{importPath}} from './{{#apiPackage}}{{apiPackage}}/{{/apiPackage}}{{importPath}}';
+{{/models}}
+{{#apiInfo}}{{#apis}}import {{importPath}} from './{{#apiPackage}}{{apiPackage}}/{{/apiPackage}}{{importPath}}';
 {{/apis}}{{/apiInfo}}
 
-{{#emitJSDoc}}/**{{#projectDescription}}
-* {{projectDescription}}.<br>{{/projectDescription}}
-* The <code>index</code> module provides access to constructors for all the classes which comprise the public API.
+{{#emitJSDoc}}/**{{#unescapedAppDescription}}
+* {{{unescapedAppDescription}}}.
+* {{/unescapedAppDescription}}
+* The <code>{{apiFolder}}</code> module provides the {{moduleName}} class that acts as a container for all the sub-APIs.
 * <p>
 * An AMD (recommended!) or CommonJS application will generally do something equivalent to the following:
 * <pre>
-* var {{moduleName}} = require('{{#invokerPackage}}{{invokerPackage}}/{{/invokerPackage}}index'); // See note below*.
-* var xxxSvc = new {{moduleName}}.XxxApi(); // Allocate the API class we're going to use.
-* var yyyModel = new {{moduleName}}.Yyy(); // Construct a model instance.
-* yyyModel.someProperty = 'someValue';
-* ...
-* var zzz = xxxSvc.doSomething(yyyModel); // Invoke the service.
-* ...
+* const yat = require('{{#invokerPackage}}{{invokerPackage}}/{{/invokerPackage}}{{apiFolder}}');
+* const api = new yat.{{moduleName}}(); // api is the main Yat API container
+* api.basePath = 'http://{{host}}'; // You can override the host URL
+* try {
+*     await api.login("test@example.com", "real_password");  // All API calls return promises
+*     console.log("Logged in.");
+*     let res = await api.subApi().doSomething(); // Each sub-API is available via a getter
+*    ...
+* }
 * </pre>
-* <em>*NOTE: For a top-level AMD script, use require(['{{#invokerPackage}}{{invokerPackage}}/{{/invokerPackage}}index'], function(){...})
-* and put the application logic within the callback function.</em>
-* </p>
-* <p>
-* A non-AMD browser application (discouraged) might do something like this:
-* <pre>
-* var xxxSvc = new {{moduleName}}.XxxApi(); // Allocate the API class we're going to use.
-* var yyy = new {{moduleName}}.Yyy(); // Construct a model instance.
-* yyyModel.someProperty = 'someValue';
-* ...
-* var zzz = xxxSvc.doSomething(yyyModel); // Invoke the service.
-* ...
-* </pre>
-* </p>
-* @module {{#invokerPackage}}{{invokerPackage}}/{{/invokerPackage}}index
+* @module {{#invokerPackage}}{{invokerPackage}}/{{/invokerPackage}}{{apiFolder}}
 * @version {{projectVersion}}
 */{{/emitJSDoc}}
+
+{{=< >=}}
+class <moduleName> {
+    constructor() {
+        this.client = new ApiClient();
+    }
+
+    login(username, password) {
+        if (this.client.loggedIn()) {
+            return;
+        }
+        const body = LoginRequest.constructFromObject({email: username, password});
+        return this.userAuthentication().login(body).then(res => {
+            this.client.authentications['JWT'].apiKey = res.access_token;
+            this.client.setToken(res);
+            return res;
+        }).catch(res => {
+            throw res.body;
+        });
+    }
+
+    isLoggedIn() {
+        return this.client.loggedIn()
+    }
+
+    logout() {
+        return this.client.logout()
+    }
+
+    get basePath() {
+        return this.client.basePath;
+    }
+
+    set basePath(url) {
+        this.client.basePath = url;
+    }
+
+    <#apiInfo><#apis>
+    <#emitJSDoc>/**
+    * Access to the <baseName> API.
+    */</emitJSDoc>
+    <#lambda.camelcase><baseName></lambda.camelcase>() {
+        // Lazily create the <baseName> api
+        if (!this.<#lambda.camelcase><baseName></lambda.camelcase>Instance) {
+            this.<#lambda.camelcase><baseName></lambda.camelcase>Instance = new <importPath>(this.client);
+        }
+        return this.<#lambda.camelcase><baseName></lambda.camelcase>Instance;
+    }
+    </apis></apiInfo>
+
+}
+<={{ }}=>
+
 export {
+    {{#emitJSDoc}}/**
+    * The User-facing API class.
+    */{{/emitJSDoc}}
+    {{moduleName}},
+
     {{=< >=}}
     <#emitJSDoc>/**
      * The ApiClient constructor.
@@ -48,11 +97,5 @@ export {
      * The <importPath> model constructor.
      * @property {module:<#invokerPackage><invokerPackage>/</invokerPackage><#modelPackage><modelPackage>/</modelPackage><importPath>}
      */</emitJSDoc>
-    <importPath></models><#apiInfo><#apis>,
-
-    <#emitJSDoc>/**
-    * The <importPath> service constructor.
-    * @property {module:<#invokerPackage><invokerPackage>/</invokerPackage><#apiPackage><apiPackage>/</apiPackage><importPath>}
-    */</emitJSDoc>
-    <importPath></apis></apiInfo>
+    <importPath></models>
 };<={{ }}=>
