--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_kotlin/README.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_kotlin/README.mustache
@@ -3,6 +3,11 @@ id: sdk_kotlin_index
 title: Kotlin SDK documentation
 ---
 
+:::caution
+The SDK code and documetnation are in ALPHA state and are under heavy development. As a result, the apis are still in
+flux, and the documentation may be out of date with the code.
+:::
+
 ## Requires
 
 {{#jvm}}
