Finalise nodejs SDK templates
The nodeJs SDK, template docs, and sample code snippets are in a
reaosnably good place now. Dood enough for alpha.

Add some more details to emoji selection policy

Working on JS SDK demo2

Add default Swift5 SDK generation

This uses the default OpenApiGen templates.

Added all options to `sdk_generator_opts.yml` and set some defaults.

Inserted frontmatter into API doc templates.

Added sidebar for Swift5 SDK

Add default Swift5 SDK generation

This uses the default OpenApiGen templates.

Added all options to `sdk_generator_opts.yml` and set some defaults.

Inserted frontmatter into API doc templates.

Added sidebar for Swift5 SDK

Add default Swift5 SDK generation

This uses the default OpenApiGen templates.

Added all options to `sdk_generator_opts.yml` and set some defaults.

Inserted frontmatter into API doc templates.

Added sidebar for Swift5 SDK

Fix OAG script

Add Yat category doc

Complete demo2 for javascript

--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/README.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/README.mustache
@@ -26,6 +26,10 @@ For more information, please visit [{{{infoUrl}}}]({{{infoUrl}}})
 
 ## Installation
 
+:::note
+Until y.at is launched publically, the NPM package will not be available. You can contact the Yat team to obtain a copy of the javascript SDK while the project is in Alpha.
+:::
+
 ### For [Node.js](https://nodejs.org/)
 
 #### npm
@@ -115,7 +119,7 @@ Once you have a YatJs instance, all the sub-APIs are accessed through getters, f
 
 API accessor | Method |  Description
 ------------ | ------------- | -------------
-{{#apiInfo}}{{#apis}}{{#operations}}{{#operation}}{{#lambda.camelcase}}{{baseName}}{{/lambda.camelcase}}() | [**{{operationId}}**]({{apiDocPath}}{{classname}}.md#{{operationId}}) | {{#summary}}{{summary}}{{/summary}}
+{{#apiInfo}}{{#apis}}{{#operations}}{{#operation}}[{{#lambda.camelcase}}{{baseName}}{{/lambda.camelcase}}()]({{apiDocPath}}{{classname}}.md) | [**{{operationId}}**]({{apiDocPath}}{{classname}}.md#{{operationId}}) | {{#summary}}{{summary}}{{/summary}}
 {{/operation}}{{/operations}}{{/apis}}{{/apiInfo}}
 
 ## Documentation for Models
