--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_swift5/api_doc.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_swift5/api_doc.mustache
@@ -1,5 +1,9 @@
-# {{classname}}{{#description}}
-{{description}}{{/description}}
+---
+id: {{#lambda.lowercase}}{{classname}}{{/lambda.lowercase}}
+title: {{classname}}
+---
+
+{{#description}}{{description}}{{/description}}
 
 All URIs are relative to *{{{basePath}}}*
 
