Add random_yat demo script
Along with some fixes to API definitions this change adds demo script for random_yat retrieval. This includes message signature via tari_crypto and ristretto too.

--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/index.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/index.mustache
@@ -38,7 +38,13 @@ class <moduleName> {
         if (this.client.loggedIn()) {
             return;
         }
-        const body = LoginRequest.constructFromObject({email: username, password});
+        let req = {password};
+        if (username.includes('@')) {
+            req.email = username;
+        } else {
+            req.alternate_id = username;
+        }
+        const body = LoginRequest.constructFromObject(req);
         return this.userAuthentication().login(body).then(res => {
             this.client.authentications['JWT'].apiKey = res.access_token;
             this.client.setToken(res);
