Aligning documentation with 2FA and random yat changes
This change includes latest api fixes for 2FA and random yat usage. Also has extended documentation on user registration and authentication, with code examples.  As well as random yat code usage example and documentation.

--- a/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/ApiClient.mustache
+++ b/taridocs-plugin/sdk_generator/templates/openapi-generator_javascript/ApiClient.mustache
@@ -112,6 +112,10 @@ class ApiClient {
         }
     }
 
+    getRefreshToken() {
+        return (this.tokens || {}).refresh_token || "";
+    }
+
     {{#emitJSDoc}}/**
     * Returns a string representation for an actual parameter.
     * @param param The actual parameter.
@@ -439,7 +443,7 @@ class ApiClient {
         // Check whether tokens should be refreshed
         if (checkToken && authNames.includes("JWT") && this.jwt && this.jwt.isExpiring(this.tokenTimeout || 30) ) {
             // Access token is about to / has expired. Refresh the token first
-            const body = { refresh_token: (this.tokens || {}).refresh_token || ""};
+            const body = { refresh_token: this.getRefreshToken() };
             return this.callApi('/auth/token/refresh', 'POST', {}, {}, {}, {}, body, [], [], ['*/*'], TokenResponse, null, false)
                 // Then repeat the request
                 .then((res) => {
